examples/invalid_modules/cyclic_import/src/cycle/alpha.argx
module cycle.alpha

import cycle.beta
